--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-<!DOCTYPE html><html lang='en'><head><meta charset='UTF-8'><meta name='viewport' content='width=device-width, initial-scale=1.0'><title>Haiku Home</title></head><body><div id='haikuContainer'><h1>Welcome to Our Website</h1><p id='haiku'>Silent autumn dusk,<br>Maple leaves whisper softly,<br>Season's peace descends.</p></div></body></html>
+<!DOCTYPE html>
+<html lang='en'>
+
+<head>
+  <meta charset='UTF-8'>
+  <meta name='viewport' content='width=device-width, initial-scale=1.0'>
+  <link rel='stylesheet' href='styles.css'>
+  <script src='app.js' defer></script>
+  <title>Haiku Home</title>
+</head>
+
+<body>
+  <div id='haikuContainer'>
+    <h1>Welcome to Our Website</h1>
+    <p id='haiku'>Silent autumn dusk,<br>Maple leaves whisper softly,<br>Season's peace descends.</p>
+  </div>
+</body>
+
+</html>
