Enhance Homepage with Stylish Haiku Display

--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
 </head>
 
 <body>
-  <div id='haikuContainer'>
-    <h1>Welcome to Our Website</h1>
-    <p id='haiku'>Silent autumn dusk,<br>Maple leaves whisper softly,<br>Season's peace descends.</p>
+  <div class='container'>
+    <h1>Welcome to Our Haiku Gallery</h1>
+    <div id='haikuContainer'>
+      <p id='haiku'>Silent autumn dusk,<br>Maple leaves whisper softly,<br>Season's peace descends.</p>
+    </div>
   </div>
 </body>
 
