Display haiku on homepage

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div class='container'>
     <h1>Welcome to Our Haiku Gallery</h1>
     <div id='haikuContainer'>
-      <p id='haiku'>Silent autumn dusk,<br>Maple leaves whisper softly,<br>Season's peace descends.</p>
+      <p id='haiku'>Cherry blossoms fade,<br>Silent under moonlit sky,<br>Spring whispers goodbye.</p>
     </div>
   </div>
 </body>
