Add Additional Haikus and Improve User Interface

--- a/index.html
+++ b/index.html
@@ -12,10 +12,12 @@
 <body>
   <div class='container'>
     <h1>Welcome to Our Haiku Gallery</h1>
+    <button id='newHaikuBtn'>Show Random Haiku</button>
     <div id='haikuContainer'>
-      <p id='haiku'>Cherry blossoms fade,<br>Silent under moonlit sky,<br>Spring whispers goodbye.</p>
+      <p id='haiku'>Click the button to see a haiku.</p>
     </div>
   </div>
+  <script src='haikuManager.js' defer></script>
 </body>
 
 </html>
