--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <div class='container'>
     <h1>Welcome to Our Haiku Gallery</h1>
     <button id='newHaikuBtn'>Show Random Haiku</button>
+    <button id='prevHaikuBtn'>Show Previous Haiku</button>
     <div id='haikuContainer'>
       <p id='haiku'>Click the button to see a haiku.</p>
     </div>
