Add Haiku Navigation Buttons

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <body>
   <div class='container'>
     <h1>Welcome to Our Haiku Gallery</h1>
-    <button id='newHaikuBtn'>Show Random Haiku</button>
-    <button id='prevHaikuBtn'>Show Previous Haiku</button>
+    <button id='newHaikuBtn'>Next Haiku</button>
+    <button id='prevHaikuBtn'>Previous Haiku</button>
     <div id='haikuContainer'>
       <p id='haiku'>Click the button to see a haiku.</p>
     </div>
