Enhance Haiku Navigation and Style

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
   <div class='container'>
     <h1>Welcome to Our Haiku Gallery</h1>
+    <p>Use ← and → keys or the buttons below to navigate through the haikus.</p>
     <button id='newHaikuBtn'>Next Haiku</button>
     <button id='prevHaikuBtn'>Previous Haiku</button>
     <div id='haikuContainer'>
