Enhanced Haiku Experience

--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 
 <body>
   <div class='container'>
-    <h1>Welcome to Our Haiku Gallery</h1>
-    <p>Use ← and → keys or the buttons below to navigate through the haikus.</p>
+    <h1>Welcome to Our Enhanced Haiku Gallery</h1>
+    <p>Use ← and → keys or the buttons below to navigate through the haikus, or just wait for the automatic transition.</p>
     <button id='newHaikuBtn'>Next Haiku</button>
     <button id='prevHaikuBtn'>Previous Haiku</button>
     <div id='haikuContainer'>
-      <p id='haiku'>Click the button to see a haiku.</p>
+      <p id='haiku'>Loading Haikus...</p>
     </div>
   </div>
   <script src='haikuManager.js' defer></script>
