Fix Background Styling Issue

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     </div>
   </div>
   <script src='haikuManager.js' defer></script>
+  <script src='manageThemes.js' defer></script>
 </body>
 
 </html>
