Add Purchase Option for Haikus

--- a/index.html
+++ b/index.html
@@ -17,9 +17,11 @@
     <button id='newHaikuBtn'>Next Haiku</button>
     <div id='haikuContainer'>
       <p id='haiku'>Loading Haikus...</p>
+      <button id='buyHaikuBtn'>Buy This Haiku</button>
     </div>
   </div>
   <script src='haikuManager.js' defer></script>
+  <script src='purchaseManager.js' defer></script>
 </body>
 
 </html>
