--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset='UTF-8'>
   <meta name='viewport' content='width=device-width, initial-scale=1.0'>
   <link rel='stylesheet' href='styles.css'>
+  <link rel='stylesheet' href='buttonStyles.css'>
   <script src='app.js' defer></script>
   <title>Haiku Home</title>
 </head>
