--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name='viewport' content='width=device-width, initial-scale=1.0'>
   <link rel='stylesheet' href='styles.css'>
   <link rel='stylesheet' href='buttonStyles.css'>
+  <script src='https://js.stripe.com/v3/'></script>
   <script src='app.js' defer></script>
   <title>Haiku Home</title>
 </head>
