Add User Reviews Feature

--- a/index.html
+++ b/index.html
@@ -20,10 +20,17 @@
     <div id='haikuContainer'>
       <p id='haiku'>Loading Haikus...</p>
       <button id='buyHaikuBtn'>Buy This Haiku</button>
+      <div id='reviewsContainer'>
+        <h3>User Reviews</h3>
+        <ul id='reviewsList'></ul>
+        <textarea id='reviewInput' placeholder='Leave a review...'></textarea>
+        <button id='submitReviewBtn'>Submit Review</button>
+      </div>
     </div>
   </div>
   <script src='haikuManager.js' defer></script>
   <script src='purchaseManager.js' defer></script>
+  <script src='reviewManager.js' defer></script>
 </body>
 
 </html>
