Implement User Account Management

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       <p id='haiku' tabindex='0'>Loading Haikus...</p>
       <button id='buyHaikuBtn' role='button' tabindex='0'>Buy This Haiku</button>
     </div>
+    <a href='login.html'>Login</a> | <a href='register.html'>Register</a>
   </div>
   <script src='haikuManager.js' defer></script>
   <script src='purchaseManager.js' defer></script>
