--- a/login.html
+++ b/login.html
@@ -9,15 +9,14 @@
 <body>
   <div class='container'>
     <h1>Login</h1>
-    <form id='loginForm'>
+    <form action='/login' method='POST'>
       <label for='username'>Username:</label>
       <input type='text' id='username' name='username' required>
       <label for='password'>Password:</label>
       <input type='password' id='password' name='password' required>
       <button type='submit'>Login</button>
     </form>
-    <p>Don't have an account? <a href='register.html'>Register here</a>.</p>
+    <p>Don't have an account? <a href='register.html'>Register here</a></p>
   </div>
-  <script src='authManager.js' defer></script>
 </body>
 </html>
