--- a/register.html
+++ b/register.html
@@ -16,7 +16,7 @@
       <input type='email' id='email' name='email' required>
       <label for='password'>Password:</label>
       <input type='password' id='password' name='password' required>
-      <button type='submit'>Register</a>
+      <button type='submit'>Register</button>
     </form>
     <p>Already have an account? <a href='login.html'>Login here</a></p>
   </div>
