Implement User Account Management

--- a/register.html
+++ b/register.html
@@ -9,7 +9,7 @@
 <body>
   <div class='container'>
     <h1>Register</h1>
-    <form action='/register' method='POST'>
+    <form id='registrationForm'>
       <label for='username'>Username:</label>
       <input type='text' id='username' name='username' required>
       <label for='email'>Email:</label>
@@ -20,5 +20,6 @@
     </form>
     <p>Already have an account? <a href='login.html'>Login here</a></p>
   </div>
+  <script src='app.js' defer></script>
 </body>
 </html>
