--- a/login.html
+++ b/login.html
@@ -9,7 +9,7 @@
 <body>
   <div class='container'>
     <h1>Login</h1>
-    <form action='/login' method='POST'>
+    <form id='loginForm'>
       <label for='username'>Username:</label>
       <input type='text' id='username' name='username' required>
       <label for='password'>Password:</label>
@@ -18,5 +18,6 @@
     </form>
     <p>Don't have an account? <a href='register.html'>Register here</a></p>
   </div>
+  <script src='app.js' defer></script>
 </body>
 </html>
