--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <div class='container'>
     <h1>Welcome to Our Enhanced Haiku Gallery</h1>
     <p>Use ← and → keys or the buttons below to navigate through the haikus, or just wait for the automatic transition.</p>
+    <img src='https://oaidalleapiprodscus.blob.core.windows.net/private/org-xoveDohUTeWTwd7uYScv2uyz/user-7E63qmNDGeNd8DOac52nI0qL/img-nn6Noz0usIGvmnt9y1sAqFE7.png?st=2024-07-11T05%3A25%3A37Z&se=2024-07-11T07%3A25%3A37Z&sp=r&sv=2023-11-03&sr=b&rscd=inline&rsct=image/png&skoid=6aaadede-4fb3-4698-a8f6-684d7786b067&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2024-07-11T02%3A32%3A41Z&ske=2024-07-12T02%3A32%3A41Z&sks=b&skv=2023-11-03&sig=z2eLNvj5NwN6R4rhf8nYQRW7N/DdGTf6Srun3BBB3xY%3D' alt='Cherry Blossoms' style='max-width: 100%; height: auto; display: block; margin: 20px auto;'>
     <button id='prevHaikuBtn' role='button' tabindex='0'>Previous Haiku</button>
     <button id='newHaikuBtn' role='button' tabindex='0'>Next Haiku</button>
     <div id='haikuContainer' role='region' aria-live='polite'>
