Add Haiku Images to Homepage

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <button id='newHaikuBtn' role='button' tabindex='0'>Next Haiku</button>
     <div id='haikuContainer' role='region' aria-live='polite'>
       <p id='haiku' tabindex='0'>Loading Haikus...</p>
+      <img id='haikuImage' src='' alt='Haiku Image' style='max-width: 100%; height: auto;'>
       <button id='buyHaikuBtn' role='button' tabindex='0'>Buy This Haiku</button>
     </div>
   </div>
