--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <button id='prevHaikuBtn' role='button' tabindex='0'>Previous Haiku</button>
     <button id='newHaikuBtn' role='button' tabindex='0'>Next Haiku</button>
     <div id='haikuContainer' role='region' aria-live='polite'>
+      <img id='haikuImage' src='' alt='Haiku Image' style='max-width: 100%; height: auto; margin-bottom: 20px;'>
       <p id='haiku' tabindex='0'>Loading Haikus...</p>
-      <img id='haikuImage' src='' alt='Haiku Image' style='max-width: 100%; height: auto; display: block; margin: 20px auto;'>
       <button id='buyHaikuBtn' role='button' tabindex='0'>Buy This Haiku</button>
     </div>
   </div>
