Add Social Sharing Features

--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
       <p id='haiku' tabindex='0'>Loading Haikus...</p>
       <img id='haikuImage' src='' alt='Haiku Image' style='max-width: 100%; height: auto;'>
       <button id='buyHaikuBtn' role='button' tabindex='0'>Buy This Haiku</button>
+      <!-- Social Sharing Buttons -->
+      <div class='social-sharing'>
+        <a href='https://www.facebook.com/sharer/sharer.php?u=https://example.com' target='_blank' class='social-button facebook'>Share on Facebook</a>
+        <a href='https://twitter.com/intent/tweet?url=https://example.com&text=Check out this beautiful haiku!' target='_blank' class='social-button twitter'>Tweet</a>
+        <a href='https://www.instagram.com' target='_blank' class='social-button instagram'>Share on Instagram</a>
+      </div>
     </div>
   </div>
   <script src='haikuManager.js' defer></script>
