--- a/index.html
+++ b/index.html
@@ -22,10 +22,17 @@
       <p id='haiku' tabindex='0'>Loading Haikus...</p>
       <img id='haikuImage' src='' alt='Haiku Image' style='max-width: 100%; height: auto;'>
       <button id='buyHaikuBtn' role='button' tabindex='0'>Buy This Haiku</button>
+      <!-- Social Sharing Buttons -->
+      <div class='social-sharing'>
+        <a href='#' class='share-btn facebook' onclick='shareOnFacebook()'>Share on Facebook</a>
+        <a href='#' class='share-btn twitter' onclick='shareOnTwitter()'>Share on Twitter</a>
+        <a href='#' class='share-btn instagram' onclick='shareOnInstagram()'>Share on Instagram</a>
+      </div>
     </div>
   </div>
   <script src='haikuManager.js' defer></script>
   <script src='purchaseManager.js' defer></script>
+  <script src='socialSharing.js' defer></script>
 </body>
 
 </html>
