Enhance Haiku Purchase Confirmation

--- a/success.html
+++ b/success.html
@@ -10,14 +10,17 @@
   <div class='container'>
     <h1>Payment Successful</h1>
     <p>Thank you for your purchase! Your transaction has been completed successfully. You can return to the <a href='index.html'>homepage</a> to continue enjoying our haikus.</p>
+    <div class='haiku-display'>
+      <h2>Your Purchased Haiku</h2>
+      <p id='purchasedHaiku'>Loading...</p>
+    </div>
     <div class='transaction-details'>
       <h2>Transaction Details</h2>
-      <p><strong>Haiku Purchased:</strong> <span id='haikuPurchased'></span></p>
-      <p><strong>Transaction ID:</strong> <span id='transactionId'></span></p>
-      <p><strong>Date:</strong> <span id='transactionDate'></span></p>
-      <p><strong>Amount Paid:</strong> <span id='amountPaid'></span> USD</p>
+      <p id='transactionId'>Transaction ID: Loading...</p>
+      <p id='transactionAmount'>Amount: Loading...</p>
+      <p id='transactionDate'>Date: Loading...</p>
     </div>
-    <p>We have sent a detailed receipt to your email address. Please check your inbox.</p>
   </div>
+  <script src='successManager.js' defer></script>
 </body>
 </html>
