--- a/index.html
+++ b/index.html
@@ -33,16 +33,19 @@
         <ul id='reviewList'></ul>
         <form id='reviewForm'>
           <textarea id='reviewText' placeholder='Enter your review here...' required></textarea>
-          <label for='rating'>Rating:</label>
-          <select id='rating'>
-            <option value='1'>1</option>
-            <option value='2'>2</option>
-            <option value='3'>3</option>
-            <option value='4'>4</option>
-            <option value='5'>5</option>
-          </select>
+          <div class='rating' aria-label='Rating'>
+             <i class='star' data-value='1'>&#9733;</i>
+             <i class='star' data-value='2'>&#9733;</i>
+             <i class='star' data-value='3'>&#9733;</i>
+             <i class='star' data-value='4'>&#9733;</i>
+             <i class='star' data-value='5'>&#9733;</i>
+          </div>
           <button type='submit'>Submit Review</button>
         </form>
+        <div class="recent-reviews">
+          <h4>Recent Reviews</h4>
+          <ul id='recentReviewList'></ul>
+        </div>
       </div>
     </div>
   </div>
