--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <button id='newHaikuBtn' role='button' tabindex='0'>Next Haiku</button>
     </div>
     <div id='haikuContainer' role='region' aria-live='polite'>
-      <img id='haikuImage' src='' alt='Haiku Image' style='max-width: 100%; height: auto; margin-bottom: 20px;'>
+      <img id='haikuImage' src='' alt='Haiku Image' style='max-width: 100%; height: auto; margin-bottom: 20px; display: block;'>
       <p id='haiku' tabindex='0'>Loading Haikus...</p>
       <button id='buyHaikuBtn' role='button' tabindex='0'>Buy This Haiku</button>
       <!-- Social Sharing Buttons -->
